src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     program -> statements
Rule 3     function -> FUNCAO VARIAVEL PARENTESE_E params PARENTESE_D CHAVE_E statements CHAVE_D
Rule 4     params -> VARIAVEL
Rule 5     params -> VARIAVEL VIRGULA params
Rule 6     params -> empty
Rule 7     statements -> statement
Rule 8     statements -> statement statements
Rule 9     statement -> expression NEWLINE
Rule 10    statement -> ENQUANTO PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
Rule 11    statement -> SE PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
Rule 12    statement -> QUEBRE
Rule 13    statement -> RETORNE expression
Rule 14    statement -> VARIAVEL RECEBE expression
Rule 15    expression -> term
Rule 16    expression -> expression MAIS term
Rule 17    expression -> expression MENOS term
Rule 18    expression -> comparison
Rule 19    comparison -> expression MAIOR term
Rule 20    comparison -> expression MENOR term
Rule 21    comparison -> expression MAIOR_IGUAL term
Rule 22    comparison -> expression MENOR_IGUAL term
Rule 23    comparison -> expression IGUAL term
Rule 24    term -> factor
Rule 25    term -> term VEZES factor
Rule 26    term -> term DIVIDIDO factor
Rule 27    factor -> NUMERO
Rule 28    factor -> VARIAVEL
Rule 29    factor -> PARENTESE_E expression PARENTESE_D
Rule 30    factor -> FRASE
Rule 31    empty -> <empty>

Terminals, with rules where they appear

CHAVE_D              : 3 10 11
CHAVE_E              : 3 10 11
DIVIDIDO             : 26
ENQUANTO             : 10
FRASE                : 30
FUNCAO               : 3
IGUAL                : 23
MAIOR                : 19
MAIOR_IGUAL          : 21
MAIS                 : 16
MENOR                : 20
MENOR_IGUAL          : 22
MENOS                : 17
NEWLINE              : 9
NUMERO               : 27
PARENTESE_D          : 3 10 11 29
PARENTESE_E          : 3 10 11 29
QUEBRE               : 12
RECEBE               : 14
RETORNE              : 13
SE                   : 11
VARIAVEL             : 3 4 5 14 28
VEZES                : 25
VIRGULA              : 5
error                : 

Nonterminals, with rules where they appear

comparison           : 18
empty                : 6
expression           : 9 10 11 13 14 16 17 19 20 21 22 23 29
factor               : 24 25 26
function             : 1
params               : 3 5
program              : 0
statement            : 7 8
statements           : 2 3 8 10 11
term                 : 15 16 17 19 20 21 22 23 25 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (2) program -> . statements
    (3) function -> . FUNCAO VARIAVEL PARENTESE_E params PARENTESE_D CHAVE_E statements CHAVE_D
    (7) statements -> . statement
    (8) statements -> . statement statements
    (9) statement -> . expression NEWLINE
    (10) statement -> . ENQUANTO PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
    (11) statement -> . SE PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
    (12) statement -> . QUEBRE
    (13) statement -> . RETORNE expression
    (14) statement -> . VARIAVEL RECEBE expression
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    FUNCAO          shift and go to state 4
    ENQUANTO        shift and go to state 9
    SE              shift and go to state 10
    QUEBRE          shift and go to state 11
    RETORNE         shift and go to state 12
    VARIAVEL        shift and go to state 5
    NUMERO          shift and go to state 16
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    program                        shift and go to state 1
    function                       shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 7
    expression                     shift and go to state 8
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> function .

    $end            reduce using rule 1 (program -> function .)


state 3

    (2) program -> statements .

    $end            reduce using rule 2 (program -> statements .)


state 4

    (3) function -> FUNCAO . VARIAVEL PARENTESE_E params PARENTESE_D CHAVE_E statements CHAVE_D

    VARIAVEL        shift and go to state 18


state 5

    (14) statement -> VARIAVEL . RECEBE expression
    (28) factor -> VARIAVEL .

    RECEBE          shift and go to state 19
    VEZES           reduce using rule 28 (factor -> VARIAVEL .)
    DIVIDIDO        reduce using rule 28 (factor -> VARIAVEL .)
    NEWLINE         reduce using rule 28 (factor -> VARIAVEL .)
    MAIS            reduce using rule 28 (factor -> VARIAVEL .)
    MENOS           reduce using rule 28 (factor -> VARIAVEL .)
    MAIOR           reduce using rule 28 (factor -> VARIAVEL .)
    MENOR           reduce using rule 28 (factor -> VARIAVEL .)
    MAIOR_IGUAL     reduce using rule 28 (factor -> VARIAVEL .)
    MENOR_IGUAL     reduce using rule 28 (factor -> VARIAVEL .)
    IGUAL           reduce using rule 28 (factor -> VARIAVEL .)


state 6

    (29) factor -> PARENTESE_E . expression PARENTESE_D
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    expression                     shift and go to state 20
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 7

    (7) statements -> statement .
    (8) statements -> statement . statements
    (7) statements -> . statement
    (8) statements -> . statement statements
    (9) statement -> . expression NEWLINE
    (10) statement -> . ENQUANTO PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
    (11) statement -> . SE PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D
    (12) statement -> . QUEBRE
    (13) statement -> . RETORNE expression
    (14) statement -> . VARIAVEL RECEBE expression
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    $end            reduce using rule 7 (statements -> statement .)
    CHAVE_D         reduce using rule 7 (statements -> statement .)
    ENQUANTO        shift and go to state 9
    SE              shift and go to state 10
    QUEBRE          shift and go to state 11
    RETORNE         shift and go to state 12
    VARIAVEL        shift and go to state 5
    NUMERO          shift and go to state 16
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    statement                      shift and go to state 7
    statements                     shift and go to state 22
    expression                     shift and go to state 8
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 8

    (9) statement -> expression . NEWLINE
    (16) expression -> expression . MAIS term
    (17) expression -> expression . MENOS term
    (19) comparison -> expression . MAIOR term
    (20) comparison -> expression . MENOR term
    (21) comparison -> expression . MAIOR_IGUAL term
    (22) comparison -> expression . MENOR_IGUAL term
    (23) comparison -> expression . IGUAL term

    NEWLINE         shift and go to state 23
    MAIS            shift and go to state 24
    MENOS           shift and go to state 25
    MAIOR           shift and go to state 26
    MENOR           shift and go to state 27
    MAIOR_IGUAL     shift and go to state 28
    MENOR_IGUAL     shift and go to state 29
    IGUAL           shift and go to state 30


state 9

    (10) statement -> ENQUANTO . PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D

    PARENTESE_E     shift and go to state 31


state 10

    (11) statement -> SE . PARENTESE_E expression PARENTESE_D CHAVE_E statements CHAVE_D

    PARENTESE_E     shift and go to state 32


state 11

    (12) statement -> QUEBRE .

    ENQUANTO        reduce using rule 12 (statement -> QUEBRE .)
    SE              reduce using rule 12 (statement -> QUEBRE .)
    QUEBRE          reduce using rule 12 (statement -> QUEBRE .)
    RETORNE         reduce using rule 12 (statement -> QUEBRE .)
    VARIAVEL        reduce using rule 12 (statement -> QUEBRE .)
    NUMERO          reduce using rule 12 (statement -> QUEBRE .)
    PARENTESE_E     reduce using rule 12 (statement -> QUEBRE .)
    FRASE           reduce using rule 12 (statement -> QUEBRE .)
    $end            reduce using rule 12 (statement -> QUEBRE .)
    CHAVE_D         reduce using rule 12 (statement -> QUEBRE .)


state 12

    (13) statement -> RETORNE . expression
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    expression                     shift and go to state 33
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 13

    (15) expression -> term .
    (25) term -> term . VEZES factor
    (26) term -> term . DIVIDIDO factor

    NEWLINE         reduce using rule 15 (expression -> term .)
    MAIS            reduce using rule 15 (expression -> term .)
    MENOS           reduce using rule 15 (expression -> term .)
    MAIOR           reduce using rule 15 (expression -> term .)
    MENOR           reduce using rule 15 (expression -> term .)
    MAIOR_IGUAL     reduce using rule 15 (expression -> term .)
    MENOR_IGUAL     reduce using rule 15 (expression -> term .)
    IGUAL           reduce using rule 15 (expression -> term .)
    PARENTESE_D     reduce using rule 15 (expression -> term .)
    ENQUANTO        reduce using rule 15 (expression -> term .)
    SE              reduce using rule 15 (expression -> term .)
    QUEBRE          reduce using rule 15 (expression -> term .)
    RETORNE         reduce using rule 15 (expression -> term .)
    VARIAVEL        reduce using rule 15 (expression -> term .)
    NUMERO          reduce using rule 15 (expression -> term .)
    PARENTESE_E     reduce using rule 15 (expression -> term .)
    FRASE           reduce using rule 15 (expression -> term .)
    $end            reduce using rule 15 (expression -> term .)
    CHAVE_D         reduce using rule 15 (expression -> term .)
    VEZES           shift and go to state 34
    DIVIDIDO        shift and go to state 35


state 14

    (18) expression -> comparison .

    NEWLINE         reduce using rule 18 (expression -> comparison .)
    MAIS            reduce using rule 18 (expression -> comparison .)
    MENOS           reduce using rule 18 (expression -> comparison .)
    MAIOR           reduce using rule 18 (expression -> comparison .)
    MENOR           reduce using rule 18 (expression -> comparison .)
    MAIOR_IGUAL     reduce using rule 18 (expression -> comparison .)
    MENOR_IGUAL     reduce using rule 18 (expression -> comparison .)
    IGUAL           reduce using rule 18 (expression -> comparison .)
    PARENTESE_D     reduce using rule 18 (expression -> comparison .)
    ENQUANTO        reduce using rule 18 (expression -> comparison .)
    SE              reduce using rule 18 (expression -> comparison .)
    QUEBRE          reduce using rule 18 (expression -> comparison .)
    RETORNE         reduce using rule 18 (expression -> comparison .)
    VARIAVEL        reduce using rule 18 (expression -> comparison .)
    NUMERO          reduce using rule 18 (expression -> comparison .)
    PARENTESE_E     reduce using rule 18 (expression -> comparison .)
    FRASE           reduce using rule 18 (expression -> comparison .)
    $end            reduce using rule 18 (expression -> comparison .)
    CHAVE_D         reduce using rule 18 (expression -> comparison .)


state 15

    (24) term -> factor .

    VEZES           reduce using rule 24 (term -> factor .)
    DIVIDIDO        reduce using rule 24 (term -> factor .)
    NEWLINE         reduce using rule 24 (term -> factor .)
    MAIS            reduce using rule 24 (term -> factor .)
    MENOS           reduce using rule 24 (term -> factor .)
    MAIOR           reduce using rule 24 (term -> factor .)
    MENOR           reduce using rule 24 (term -> factor .)
    MAIOR_IGUAL     reduce using rule 24 (term -> factor .)
    MENOR_IGUAL     reduce using rule 24 (term -> factor .)
    IGUAL           reduce using rule 24 (term -> factor .)
    PARENTESE_D     reduce using rule 24 (term -> factor .)
    ENQUANTO        reduce using rule 24 (term -> factor .)
    SE              reduce using rule 24 (term -> factor .)
    QUEBRE          reduce using rule 24 (term -> factor .)
    RETORNE         reduce using rule 24 (term -> factor .)
    VARIAVEL        reduce using rule 24 (term -> factor .)
    NUMERO          reduce using rule 24 (term -> factor .)
    PARENTESE_E     reduce using rule 24 (term -> factor .)
    FRASE           reduce using rule 24 (term -> factor .)
    $end            reduce using rule 24 (term -> factor .)
    CHAVE_D         reduce using rule 24 (term -> factor .)


state 16

    (27) factor -> NUMERO .

    VEZES           reduce using rule 27 (factor -> NUMERO .)
    DIVIDIDO        reduce using rule 27 (factor -> NUMERO .)
    NEWLINE         reduce using rule 27 (factor -> NUMERO .)
    MAIS            reduce using rule 27 (factor -> NUMERO .)
    MENOS           reduce using rule 27 (factor -> NUMERO .)
    MAIOR           reduce using rule 27 (factor -> NUMERO .)
    MENOR           reduce using rule 27 (factor -> NUMERO .)
    MAIOR_IGUAL     reduce using rule 27 (factor -> NUMERO .)
    MENOR_IGUAL     reduce using rule 27 (factor -> NUMERO .)
    IGUAL           reduce using rule 27 (factor -> NUMERO .)
    PARENTESE_D     reduce using rule 27 (factor -> NUMERO .)
    ENQUANTO        reduce using rule 27 (factor -> NUMERO .)
    SE              reduce using rule 27 (factor -> NUMERO .)
    QUEBRE          reduce using rule 27 (factor -> NUMERO .)
    RETORNE         reduce using rule 27 (factor -> NUMERO .)
    VARIAVEL        reduce using rule 27 (factor -> NUMERO .)
    NUMERO          reduce using rule 27 (factor -> NUMERO .)
    PARENTESE_E     reduce using rule 27 (factor -> NUMERO .)
    FRASE           reduce using rule 27 (factor -> NUMERO .)
    $end            reduce using rule 27 (factor -> NUMERO .)
    CHAVE_D         reduce using rule 27 (factor -> NUMERO .)


state 17

    (30) factor -> FRASE .

    VEZES           reduce using rule 30 (factor -> FRASE .)
    DIVIDIDO        reduce using rule 30 (factor -> FRASE .)
    NEWLINE         reduce using rule 30 (factor -> FRASE .)
    MAIS            reduce using rule 30 (factor -> FRASE .)
    MENOS           reduce using rule 30 (factor -> FRASE .)
    MAIOR           reduce using rule 30 (factor -> FRASE .)
    MENOR           reduce using rule 30 (factor -> FRASE .)
    MAIOR_IGUAL     reduce using rule 30 (factor -> FRASE .)
    MENOR_IGUAL     reduce using rule 30 (factor -> FRASE .)
    IGUAL           reduce using rule 30 (factor -> FRASE .)
    PARENTESE_D     reduce using rule 30 (factor -> FRASE .)
    ENQUANTO        reduce using rule 30 (factor -> FRASE .)
    SE              reduce using rule 30 (factor -> FRASE .)
    QUEBRE          reduce using rule 30 (factor -> FRASE .)
    RETORNE         reduce using rule 30 (factor -> FRASE .)
    VARIAVEL        reduce using rule 30 (factor -> FRASE .)
    NUMERO          reduce using rule 30 (factor -> FRASE .)
    PARENTESE_E     reduce using rule 30 (factor -> FRASE .)
    FRASE           reduce using rule 30 (factor -> FRASE .)
    $end            reduce using rule 30 (factor -> FRASE .)
    CHAVE_D         reduce using rule 30 (factor -> FRASE .)


state 18

    (3) function -> FUNCAO VARIAVEL . PARENTESE_E params PARENTESE_D CHAVE_E statements CHAVE_D

    PARENTESE_E     shift and go to state 36


state 19

    (14) statement -> VARIAVEL RECEBE . expression
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    expression                     shift and go to state 37
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 20

    (29) factor -> PARENTESE_E expression . PARENTESE_D
    (16) expression -> expression . MAIS term
    (17) expression -> expression . MENOS term
    (19) comparison -> expression . MAIOR term
    (20) comparison -> expression . MENOR term
    (21) comparison -> expression . MAIOR_IGUAL term
    (22) comparison -> expression . MENOR_IGUAL term
    (23) comparison -> expression . IGUAL term

    PARENTESE_D     shift and go to state 38
    MAIS            shift and go to state 24
    MENOS           shift and go to state 25
    MAIOR           shift and go to state 26
    MENOR           shift and go to state 27
    MAIOR_IGUAL     shift and go to state 28
    MENOR_IGUAL     shift and go to state 29
    IGUAL           shift and go to state 30


state 21

    (28) factor -> VARIAVEL .

    VEZES           reduce using rule 28 (factor -> VARIAVEL .)
    DIVIDIDO        reduce using rule 28 (factor -> VARIAVEL .)
    PARENTESE_D     reduce using rule 28 (factor -> VARIAVEL .)
    MAIS            reduce using rule 28 (factor -> VARIAVEL .)
    MENOS           reduce using rule 28 (factor -> VARIAVEL .)
    MAIOR           reduce using rule 28 (factor -> VARIAVEL .)
    MENOR           reduce using rule 28 (factor -> VARIAVEL .)
    MAIOR_IGUAL     reduce using rule 28 (factor -> VARIAVEL .)
    MENOR_IGUAL     reduce using rule 28 (factor -> VARIAVEL .)
    IGUAL           reduce using rule 28 (factor -> VARIAVEL .)
    ENQUANTO        reduce using rule 28 (factor -> VARIAVEL .)
    SE              reduce using rule 28 (factor -> VARIAVEL .)
    QUEBRE          reduce using rule 28 (factor -> VARIAVEL .)
    RETORNE         reduce using rule 28 (factor -> VARIAVEL .)
    VARIAVEL        reduce using rule 28 (factor -> VARIAVEL .)
    NUMERO          reduce using rule 28 (factor -> VARIAVEL .)
    PARENTESE_E     reduce using rule 28 (factor -> VARIAVEL .)
    FRASE           reduce using rule 28 (factor -> VARIAVEL .)
    $end            reduce using rule 28 (factor -> VARIAVEL .)
    CHAVE_D         reduce using rule 28 (factor -> VARIAVEL .)
    NEWLINE         reduce using rule 28 (factor -> VARIAVEL .)


state 22

    (8) statements -> statement statements .

    $end            reduce using rule 8 (statements -> statement statements .)
    CHAVE_D         reduce using rule 8 (statements -> statement statements .)


state 23

    (9) statement -> expression NEWLINE .

    ENQUANTO        reduce using rule 9 (statement -> expression NEWLINE .)
    SE              reduce using rule 9 (statement -> expression NEWLINE .)
    QUEBRE          reduce using rule 9 (statement -> expression NEWLINE .)
    RETORNE         reduce using rule 9 (statement -> expression NEWLINE .)
    VARIAVEL        reduce using rule 9 (statement -> expression NEWLINE .)
    NUMERO          reduce using rule 9 (statement -> expression NEWLINE .)
    PARENTESE_E     reduce using rule 9 (statement -> expression NEWLINE .)
    FRASE           reduce using rule 9 (statement -> expression NEWLINE .)
    $end            reduce using rule 9 (statement -> expression NEWLINE .)
    CHAVE_D         reduce using rule 9 (statement -> expression NEWLINE .)


state 24

    (16) expression -> expression MAIS . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 39
    factor                         shift and go to state 15

state 25

    (17) expression -> expression MENOS . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 40
    factor                         shift and go to state 15

state 26

    (19) comparison -> expression MAIOR . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 41
    factor                         shift and go to state 15

state 27

    (20) comparison -> expression MENOR . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 42
    factor                         shift and go to state 15

state 28

    (21) comparison -> expression MAIOR_IGUAL . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 43
    factor                         shift and go to state 15

state 29

    (22) comparison -> expression MENOR_IGUAL . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 44
    factor                         shift and go to state 15

state 30

    (23) comparison -> expression IGUAL . term
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    term                           shift and go to state 45
    factor                         shift and go to state 15

state 31

    (10) statement -> ENQUANTO PARENTESE_E . expression PARENTESE_D CHAVE_E statements CHAVE_D
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    expression                     shift and go to state 46
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 32

    (11) statement -> SE PARENTESE_E . expression PARENTESE_D CHAVE_E statements CHAVE_D
    (15) expression -> . term
    (16) expression -> . expression MAIS term
    (17) expression -> . expression MENOS term
    (18) expression -> . comparison
    (24) term -> . factor
    (25) term -> . term VEZES factor
    (26) term -> . term DIVIDIDO factor
    (19) comparison -> . expression MAIOR term
    (20) comparison -> . expression MENOR term
    (21) comparison -> . expression MAIOR_IGUAL term
    (22) comparison -> . expression MENOR_IGUAL term
    (23) comparison -> . expression IGUAL term
    (27) factor -> . NUMERO
    (28) factor -> . VARIAVEL
    (29) factor -> . PARENTESE_E expression PARENTESE_D
    (30) factor -> . FRASE

    NUMERO          shift and go to state 16
    VARIAVEL        shift and go to state 21
    PARENTESE_E     shift and go to state 6
    FRASE           shift and go to state 17

    expression                     shift and go to state 47
    term                           shift and go to state 13
    comparison                     shift and go to state 14
    factor                         shift and go to state 15

state 33

    (13) statement -> RETORNE expression .
    (16) expression -> expression . MAIS term
    (17) expression -> expression . MENOS term
    (19) comparison -> expression . MAIOR term
    (20) comparison -> expression . MENOR term
    (21) comparison -> expression . MAIOR_IGUAL term
    (22) comparison -> expression . MENOR_IGUAL term
    (23) comparison -> expression . IGUAL term

    ENQUANTO        reduce using rule 13 (statement -> RETORNE expression .)
    SE              reduce using rule 13 (statement -> RETORNE expression .)
    QUEBRE          reduce using rule 13 (statement -> RETORNE expression .)
    RETORNE         reduce using rule 13 (statement -> RETORNE expression .)
    VARIAVEL        reduce using rule 13 (statement -> RETORNE expression .)
    NUMERO          reduce using rule 13 (statement -> RETORNE expression .)
    PARENTESE_E     reduce using rule 13 (statement -> RETORNE expression .)
    FRASE           reduce using rule 13 (statement -> RETORNE expression .)
    $end            reduce using rule 13 (statement -> RETORNE expression .)
    CHAVE_D         reduce using rule 13 (statement -> RETORNE expression .)
    MAIS            shift and go to state 24
    MENOS           shift and go to state 25
    MAIOR           shift and go to state 26
    MENOR           shift and go to state 27
    MAIOR_IGUAL     shift and go to state 28
    MENOR_IGUAL     shift and go to state 29
    IGUAL           shift and go to state 30


state 34
